<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_complain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jzbwlkj.travelletv.activity.my.ComplainActivity">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:id="@+id/ll_complain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@mipmap/circlejx">

        <EditText
            android:id="@+id/et_complain_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_content"
            android:padding="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/world_length" />

    <Button
        android:id="@+id/bt_complain_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/red"
        android:text="@string/complain_commit"
        android:textColor="@color/white"

        />


</LinearLayout>
