<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jzbwlkj.travelletv.activity.login.AuthenticationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:text="@string/authentication"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/xing"
            android:drawablePadding="5dp"
            android:text="姓名"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/et_authentication_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="7"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@mipmap/xing"
            android:drawablePadding="5dp"
            android:text="@string/sex"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_authentication_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/man" />

            <RadioButton
                android:id="@+id/rb_authentication_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/woman" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/xing"
            android:drawablePadding="5dp"
            android:text="@string/birthday"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/et_authentication_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:focusable="false" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/xing"
            android:drawablePadding="5dp"
            android:text="@string/phone"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/et_authentication_phone"
            android:layout_width="match_parent"
            android:maxLength="11"
            android:layout_height="wrap_content"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/xing"
            android:drawablePadding="5dp"
            android:text="@string/id_number"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_marginLeft="10dp"
            android:inputType="number"
            android:maxLength="18"
            android:id="@+id/et_authentication_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/school"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/et_authentication_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/student_id"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:id="@+id/et_authentication_student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="注意：* 标记的必须填" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/bt_authentication_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/red"
        android:text="@string/next"
        android:textColor="@color/white" />


</LinearLayout>
